Fix absolute -> relative swap